--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@material-ui/core": "^4.12.2",
     "drei": "2.2.21",
     "react": "17.0.1",
     "react-dom": "17.0.1",
